FIX: Fixed sidebar button appeareance for mobile devices

--- a/CLIENT/src/app/components/sidebar/sidebar.component.css
+++ b/CLIENT/src/app/components/sidebar/sidebar.component.css
@@ -43,3 +43,9 @@
     cursor: pointer;
     background-color: #bfbdbd;
 }
+
+@media (max-width: 768px) {
+    .sidebar-button {
+        background-color: whitesmoke;
+    }
+}
